# paper-plane

./: .editorconfig  .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  PaperPlane.doap  README.md  meson.build  meson_options.txt
data/: app.drey.PaperPlane.desktop.in.in  app.drey.PaperPlane.gschema.xml.in  app.drey.PaperPlane.metainfo.xml.in.in  com.github.melix99.telegrand.desktop.in  com.github.melix99.telegrand.desktop.in.in  com.github.melix99.telegrand.gschema.xml.in  com.github.melix99.telegrand.metainfo.xml.in.in  com.github.melix99.telegrand.service.in  meson.build  resources.gresource.xml
data/resources/: meson.build  resources.gresource.xml  style-dark.css  style-hc.css  style.css
data/resources/ui/: add-account-row.blp  add-account-row.ui  add_account_window.ui  avatar-with-selection.blp  avatar-with-selection.ui  chat_box.ui  chat_page.ui  components-avatar-selector.ui  components-avatar.blp  components-avatar.ui  components-chat-member-row.ui  components-message-entry.blp  components-message-entry.ui  content-chat-action-bar.blp  content-chat-action-bar.ui  content-chat-history.ui  content-chat-info-dialog.ui  content-chat-info-member-row.ui  content-chat-info-window.blp  content-chat-info-window.ui  content-event-row.blp  content-event-row.ui  content-message-bubble.ui  content-message-document.blp  content-message-document.ui  content-message-indicators.ui  content-message-label.ui  content-message-location.ui  content-message-media.ui  content-message-photo.blp  content-message-photo.ui  content-message-row.ui  content-message-sticker.blp  content-message-sticker.ui  content-message-text.blp  content-message-text.ui  content-send-media-window.blp  content-send-message-area.ui  content-send-photo-dialog.blp  content-send-photo-dialog.ui  (+41 more)
src/: add_account_window.rs  application.rs  chat_box.rs  chat_page.rs  config.rs.in  country_list.rs  dialog_data.rs  dialog_model.rs  dialog_row.rs  expressions.rs  i18n.rs  login.rs  macros.rs  main.rs  meson.build  message_row.rs  phone_number_input.blp  phone_number_input.rs  preferences_window.rs  session_manager.rs  strings.rs  take_picture_dialog.rs  telegram.rs  types.rs  ui-resources.gresource.xml  utils.rs  window.blp  window.rs
src/components/: avatar.blp  avatar.rs  background.rs  label_with_widgets.rs  loading_indicator.rs  message_entry.rs  mod.rs  snow.rs  sticker.rs  theme_preview.rs  vector_path.rs
src/components/message_list_view/: event_row.rs  item.rs  mod.rs  model.rs  row.rs
src/model/: avatar.rs  basic_group.rs  chat.rs  chat_action.rs  chat_action_list.rs  chat_folder_list.rs  chat_history_item.rs  chat_history_model.rs  chat_list.rs  chat_list_item.rs  client.rs  client_manager.rs  client_state_auth.rs  client_state_auth_code.rs  client_state_auth_other_device.rs  client_state_auth_password.rs  client_state_auth_phone_number.rs  client_state_auth_registration.rs  client_state_logging_out.rs  client_state_session.rs  country_info.rs  country_list.rs  message.rs  message_forward_info.rs  message_interaction_info.rs  mod.rs  secret_chat.rs  sponsored_message.rs  supergroup.rs  user.rs
src/proxy/: mod.rs  proxy_handle_dialog.rs  proxy_object.rs  proxy_row.rs  proxy_window.rs
src/session/: avatar.rs  basic_group.rs  basic_group_list.rs  chat.rs  chat_list.rs  media_viewer.rs  mod.rs  preferences_window.blp  preferences_window.rs  secret_chat.rs  secret_chat_list.rs  session.rs  supergroup.rs  supergroup_list.rs  user.rs  user_list.rs
src/session/chat/: action.rs  action_list.rs  chat.rs  history.rs  item.rs  message.rs  message_content.rs  message_forward_info.rs  message_sender.rs  mod.rs  sponsored_message.rs  sponsored_message_list.rs
src/session/components/: avatar.rs  avatar_map_marker.rs  avatar_selector.rs  camera_paintable.rs  chat_member_row.rs  map_marker.rs  message_entry.rs  mod.rs  scale_revealer.rs
src/session/contacts_window/: mod.rs  row.rs
src/session/content/: background.rs  chat_action_bar.blp  chat_action_bar.rs  chat_history.rs  chat_history.ui  chat_history_item.rs  chat_history_model.rs  chat_history_row.rs  chat_info_dialog.rs  chat_info_window.blp  chat_info_window.rs  content.rs  event_row.blp  event_row.rs  item_row.rs  message_bubble.rs  message_indicators.rs  message_label.rs  message_menu.blp  message_row.rs  message_sticker.rs  mod.rs  pinned_messages_bar.rs  pinned_messages_view.rs  send_media_window.blp  send_media_window.rs  send_message_area.rs  send_photo_dialog.rs  user_dialog.rs
src/session/sidebar/: avatar.rs  chat_row.rs  mini_thumbnail.rs  mod.rs  row.rs  row_menu.blp  selection.rs  sidebar.rs
src/strings/: chat_subtitle_string.rs  mod.rs  user_status_string.rs
src/tdlib/: avatar.rs  basic_group.rs  basic_group_list.rs  chat.rs  chat_action.rs  chat_action_list.rs  chat_history.rs  chat_history_item.rs  chat_list.rs  chat_list_item.rs  chat_member.rs  country_info.rs  country_list.rs  history.rs  item.rs  message.rs  message_forward_info.rs  message_interaction_info.rs  mod.rs  secret_chat.rs  secret_chat_list.rs  sponsored_message.rs  supergroup.rs  supergroup_list.rs  user.rs  user_list.rs
src/ui/: client_manager_view.blp  client_manager_view.rs  client_view.blp  client_view.rs  meson.build  mod.rs  ui-resources.gresource.xml  window.blp  window.rs
src/ui/components/: animated_bin.blp  animated_bin.rs  avatar.blp  avatar.rs  avatar_map_marker.blp  avatar_map_marker.rs  avatar_with_selection.blp  avatar_with_selection.rs  circular_progress_bar.rs  icon_map_marker.blp  icon_map_marker.rs  map.blp  map.rs  map_marker.rs  map_window.blp  map_window.rs  message_entry.blp  message_entry.rs  mod.rs  phone_number_input.blp  phone_number_input.rs  snow.rs  sticker.rs  style_selection_row.blp  style_selection_row.rs  style_variant_preview.blp  style_variant_preview.rs
src/ui/login/: code.blp  code.rs  mod.blp  mod.rs  other_device.blp  other_device.rs  password.blp  password.rs  phone_number.blp  phone_number.rs  registration.blp  registration.rs
src/ui/session/: mod.blp  mod.rs  preferences_window.blp  preferences_window.rs  row.blp  row.rs  (+2 more)
(+169 files in other folders)
