[package]
name = "paper-plane"
version = "0.1.0-beta.3"
authors = ["Marco Melorio <marco.melorio@protonmail.com>", "Marcus Behrendt <marcus.behrendt.86@gmail.com>"]
edition = "2021"

[dependencies]
adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", branch = "v0.3-adaptive-states-and-more", package = "libadwaita", features = ["v1_3"] }
anyhow = "1"
ellipse = "0.2"
futures = { version = "0.3", default-features = false }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.6", package = "gtk4", features = ["gnome_44", "blueprint"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
indexmap = "1"
locale_config = "0.3"
log = "0.4"
once_cell = "1"
pretty_env_logger = "0.5"
qrcode-generator = { version = "4", default-features = false }
regex = "1"
rlt = { package = "gtk-rlottie", git = "https://github.com/YuraIz/gtk-rlottie-rs" }
tdlib = { version = "0.7", default-features = false }
temp-dir = "0.1"
thiserror = "1"

[profile.release]
lto = true
codegen-units = 1
