option(
  'profile',
  type: 'combo',
  choices: [
    'default',
    'development'
  ],
  value: 'default',
  description: 'The build profile for Telegrand. One of "default" or "development".'
)

option(
  'tg_api_id',
  type: 'integer',
  value: 1,
  description: 'Application identifier for accessing the Telegram API, which can be obtained at https://my.telegram.org.'
)

option(
  'tg_api_hash',
  type: 'string',
  description: 'Hash of the Application identifier for accessing the Telegram API, which can be obtained at https://my.telegram.org.'
)
