option(
  'profile',
  type: 'combo',
  choices: [
    'default',
    'development'
  ],
  value: 'default',
  description: 'The build profile for Paper Plane. One of "default" or "development".'
)

option(
  'tg_api_id',
  type: 'integer',
  value: 17349,
  description: 'Application identifier for accessing the Telegram API, which can be obtained at https://my.telegram.org.'
)

option(
  'tg_api_hash',
  type: 'string',
  value: '344583e45741c457fe1862106095a5eb',
  description: 'Hash of the Application identifier for accessing the Telegram API, which can be obtained at https://my.telegram.org.'
)
