# UI resources
blueprints = custom_target('blueprints',
  input: files(
    'client_manager_view.blp',
    'client_view.blp',
    'window.blp',

    'components/animated_bin.blp',
    'components/avatar.blp',
    'components/avatar_map_marker.blp',
    'components/avatar_with_selection.blp',
    'components/map.blp',
    'components/message_entry.blp',
    'components/phone_number_input.blp',

    'login/code.blp',
    'login/mod.blp',
    'login/other_device.blp',
    'login/password.blp',
    'login/phone_number.blp',
    'login/registration.blp',

    'session/contacts_window/row.blp',
    'session/content/chat_action_bar.blp',
    'session/content/chat_info_window.blp',
    'session/content/event_row.blp',
    'session/content/message_menu.blp',
    'session/content/message_row/base.blp',
    'session/content/message_row/bubble.blp',
    'session/content/message_row/document/mod.blp',
    'session/content/message_row/document/status_indicator.blp',
    'session/content/message_row/indicators.blp',
    'session/content/message_row/label.blp',
    'session/content/message_row/media_picture.blp',
    'session/content/message_row/mod.blp',
    'session/content/message_row/photo.blp',
    'session/content/message_row/reply.blp',
    'session/content/message_row/sticker.blp',
    'session/content/message_row/text.blp',
    'session/content/message_row/video.blp',
    'session/content/mod.blp',
    'session/content/send_media_window.blp',
    'session/mod.blp',
    'session/preferences_window.blp',
    'session/row.blp',
    'session/sidebar/avatar.blp',
    'session/sidebar/row.blp',
    'session/sidebar/row_menu.blp',
    'session/sidebar/search/item_row.blp',
    'session/sidebar/search/section_row.blp',
    'session/switcher.blp',
  ),
  output: '.',
  command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
)

ui_resources = gnome.compile_resources(
  'ui-resources',
  'ui-resources.gresource.xml',
  gresource_bundle: true,
  source_dir: meson.current_build_dir(),
  install: true,
  install_dir: pkgdatadir,
  dependencies: blueprints,
)
